logs/ros-job-generation.log
Listing '.'...
Listing './bin'...
Compiling './bin/generate_devel.py'...
***   File "./bin/generate_devel.py", line 129
    print "UNSUPPORTED VCS TYPE"
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/generate_postrelease.py'...
***   File "./bin/generate_postrelease.py", line 120
    print "UNSUPPORTED VCS TYPE"
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/generate_prerelease.py'...
***   File "./bin/generate_prerelease.py", line 127
    print 'Cannot create job %s because a job with the same name is already running.'%job_name
                                                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/generate_rosinstall.py'...
***   File "./bin/generate_rosinstall.py", line 27
    print rosinstall
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/generate_unreleased.py'...
***   File "./bin/generate_unreleased.py", line 160
    print 'Creating unreleased Hudson jobs:'
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/rst2html.py'...
Compiling './bin/rst2html4.py'...
Compiling './bin/rst2html5.py'...
Compiling './bin/rst2latex.py'...
Compiling './bin/rst2man.py'...
Compiling './bin/rst2odt.py'...
Compiling './bin/rst2odt_prepstyles.py'...
Compiling './bin/rst2pseudoxml.py'...
Compiling './bin/rst2s5.py'...
Compiling './bin/rst2xetex.py'...
Compiling './bin/rst2xml.py'...
Compiling './bin/rstpep2html.py'...
Compiling './bin/run_auto_stack_devel.py'...
***   File "./bin/run_auto_stack_devel.py", line 16
    print "Starting run_auto_stack_devel script"
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/run_auto_stack_postrelease.py'...
***   File "./bin/run_auto_stack_postrelease.py", line 21
    print "You can only provide one stack at a time"
                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/run_auto_stack_prerelease.py'...
***   File "./bin/run_auto_stack_prerelease.py", line 35
    print "Setting up environment"
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/run_auto_stack_unreleased.py'...
***   File "./bin/run_auto_stack_unreleased.py", line 26
    print 'Operating on ROS distro %s'%distro_obj.release_name
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/catkin_pkg'...
Listing './lib/python3.5/site-packages/catkin_pkg/cli'...
Listing './lib/python3.5/site-packages/catkin_pkg/templates'...
Listing './lib/python3.5/site-packages/catkin_pkg-0.3.9.egg-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/docutils'...
Listing './lib/python3.5/site-packages/docutils/languages'...
Listing './lib/python3.5/site-packages/docutils/parsers'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst/directives'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst/include'...
Listing './lib/python3.5/site-packages/docutils/parsers/rst/languages'...
Listing './lib/python3.5/site-packages/docutils/readers'...
Listing './lib/python3.5/site-packages/docutils/transforms'...
Listing './lib/python3.5/site-packages/docutils/utils'...
Listing './lib/python3.5/site-packages/docutils/utils/math'...
Listing './lib/python3.5/site-packages/docutils/writers'...
Listing './lib/python3.5/site-packages/docutils/writers/html4css1'...
Listing './lib/python3.5/site-packages/docutils/writers/html5_polyglot'...
Listing './lib/python3.5/site-packages/docutils/writers/latex2e'...
Listing './lib/python3.5/site-packages/docutils/writers/odf_odt'...
Listing './lib/python3.5/site-packages/docutils/writers/pep_html'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/big-black'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/big-white'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/default'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/medium-black'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/medium-white'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/small-black'...
Listing './lib/python3.5/site-packages/docutils/writers/s5_html/themes/small-white'...
Listing './lib/python3.5/site-packages/docutils/writers/xetex'...
Listing './lib/python3.5/site-packages/docutils-0.14.dist-info'...
Listing './lib/python3.5/site-packages/jenkins'...
Listing './lib/python3.5/site-packages/job_generation'...
Compiling './lib/python3.5/site-packages/job_generation/apt_parser.py'...
***   File "./lib/python3.5/site-packages/job_generation/apt_parser.py", line 107
    print dep
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/job_generation/jobs_common.py'...
***   File "./lib/python3.5/site-packages/job_generation/jobs_common.py", line 195
    print 'Stack "%s" is not in stack list. Not adding this stack to rosinstall file'%s
                                                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/multi_key_dict-2.0.3.egg-info'...
Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc/source'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-3.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/python_jenkins-0.4.15.egg-info'...
Listing './lib/python3.5/site-packages/ros_job_generation-0.1.27.egg-info'...
Listing './lib/python3.5/site-packages/rosdep-0.11.8.egg-info'...
Listing './lib/python3.5/site-packages/rosdep2'...
Listing './lib/python3.5/site-packages/rosdep2/platforms'...
Listing './lib/python3.5/site-packages/rosdistro'...
Listing './lib/python3.5/site-packages/rosdistro/external'...
Listing './lib/python3.5/site-packages/rosdistro/manifest_provider'...
Listing './lib/python3.5/site-packages/rosdistro-0.6.4.egg-info'...
Listing './lib/python3.5/site-packages/rospkg'...
Listing './lib/python3.5/site-packages/rospkg-1.1.4.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
